changes in index

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Index Page</h1>
+    <h1>Indexs Page</h1>
     <textarea id="chat-server" cols="150" rows="30"></textarea> <br>
     <input type="text" name="message" id="message">
     <button type="button" id="send" value="send">send</button>
